--- a/.github/workflows/deps.yml
+++ b/.github/workflows/deps.yml
@@ -3,7 +3,7 @@ name: Re-Sign Package
 on:
   push:
     branches:
-      - uwp
+      - main
 
 jobs:
   re-sign-package:
@@ -16,7 +16,7 @@ jobs:
       # Step 2: Download the .appx file from Google Drive
       - name: Download appx file
         run: |
-          Invoke-WebRequest -Uri "https://drive.google.com/uc?export=download&id=1zOnmrj2t6FKpia5pCE8M9OktpnrqNjJS" -OutFile "${{ github.workspace }}\Angry Birds Space Full.appx"
+          Invoke-WebRequest -Uri "https://drive.google.com/uc?export=download&id=1zOnmrj2t6FKpia5pCE8M9OktpnrqNjJS" -OutFile "${{ github.workspace }}\Angry` Birds` Space` Full.appx"
 
       # Step 3: Download the re-sign application
       - name: Download re-sign application
@@ -31,8 +31,8 @@ jobs:
       # Step 5: Manually set paths and ensure file integrity
       - name: Re-Sign App Package
         run: |
-          $toolPath = "${{ github.workspace }}\re-sign-tool\PackageRe-Sign (Release)\pkgrsn.exe"
-          $appxPath = "${{ github.workspace }}\Angry Birds Space Full.appx"
+          $toolPath = "${{ github.workspace }}\re-sign-tool\PackageRe-Sign` (Release)\pkgrsn.exe"
+          $appxPath = "${{ github.workspace }}\Angry` Birds` Space` Full.appx"
           if (!(Test-Path $appxPath)) {
               Write-Error "The .appx file is missing or corrupted."
               exit 1
@@ -46,4 +46,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: re-signed-appx
-          path: "${{ github.workspace }}Angry Birds Space Full.appx"
+          path: "${{ github.workspace }}Angry` Birds` Space` Full.appx"
