--- a/.github/workflows/deps.yml
+++ b/.github/workflows/deps.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Set up Developer Command Prompt for VS 2022
         run: |
-          call "C:\Program Files\Microsoft Visual Studio\2022\BuildTools\Common7\Tools\VsDevCmd.bat"
+          "C:\Program Files\Microsoft Visual Studio\2022\BuildTools\Common7\Tools\VsDevCmd.bat"
 
       - name: Download export.appx from Google Drive
         run: |
