--- a/.github/workflows/deps.yml
+++ b/.github/workflows/deps.yml
@@ -1,4 +1,4 @@
-name: Download and Pack Appx
+name: Download and Repack Appx
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - uwp
 
 jobs:
-  download_and_pack:
+  download_and_repack:
     runs-on: windows-latest
 
     steps:
@@ -14,18 +14,18 @@ jobs:
         run: |
           curl -L -o export.appx "https://drive.google.com/uc?export=download&id=1ODdhUmh4KixddOP1QWGOHeZHAgjDYkL0"
 
-      - name: Create extract directory
-        run: |
-          mkdir extractDir
-
-      - name: Run MakeAppx pack
+      - name: Extract the appx
         shell: cmd
         run: |
-          "C:\Program Files\Microsoft Visual Studio\2022\BuildTools\Common7\Tools\VsDevCmd.bat" ^
-          && "C:\Program Files (x86)\Windows Kits\10\bin\10.0.19041.0\x86\makeappx.exe" pack /d "%CD%\extractDir" /p "%CD%\export.appx"
+          "C:\Program Files (x86)\Windows Kits\10\bin\10.0.19041.0\x86\makeappx.exe" unpack /p "%CD%\export.appx" /d "%CD%\extractDir"
 
-      - name: Upload appx file as artifact
+      - name: Repack the appx
+        shell: cmd
+        run: |
+          "C:\Program Files (x86)\Windows Kits\10\bin\10.0.19041.0\x86\makeappx.exe" pack /d "%CD%\extractDir" /p "%CD%\export_repacked.appx"
+
+      - name: Upload repacked appx file as artifact
         uses: actions/upload-artifact@v3
         with:
           name: export-appx
-          path: export.appx
+          path: export_repacked.appx
